Resolves: tdf#86305 clone upper left of matrix result if double token

Change-Id: I541577e0b99b0144a755e5755adc890c0ca8d204
(cherry picked from commit ffc1ffed11dc63a69fc2db04f12b3ea266b580fe)
Reviewed-on: https://gerrit.libreoffice.org/16326
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>